test/files/neg/yimports-masked.check
C_2.scala:11: error: not found: type Numb
    val v: Numb = Answer
           ^
C_2.scala:12: error: not found: value println
    def greet() = println("hello, world!")
                  ^
2 errors
